Fix visual stimulus and Fourier analysis chapter. Change appendices' chapters to sections. Other minor changes.

--- a/thesis/tex/BCI.tex
+++ b/thesis/tex/BCI.tex
@@ -6,19 +6,19 @@ The previous chapter discussed the biology of the brain and described the brain 
 \section{Visual stimulus}
 \label{sec:stimuli}
 
-As discussed in section~\ref{sec:VEP}, it is possible to present multiple visual stimuli to a subject and detect, which stimulus is the subject looking at. It was also mentioned that computer monitor can be used to present visual stimuli. This section will discuss how stimuli with certain blinking frequency can be displayed on a computer screen. Research has shown that LCD screens produce more reliable \gls{SSVEP} response than \gls{LED}~\cite{lcd_lcd_led}. Another article published in the same year, however, concludes that \glspl{BCI} that used \glspl{LED} as visual stimuli have achieved better performance~\cite{ssvep_stim}. But since using \glspl{LED} requires dedicated hardware, in this thesis only the stimulus that can be presented by a computer monitor is discussed.
+As discussed in section~\ref{sec:VEP}, it is possible to present multiple visual stimuli to a subject and detect, which stimulus is the subject looking at. It was also mentioned that computer monitor can be used to present visual stimuli. This section will discuss how stimuli with certain blinking frequency can be displayed on a computer screen. Research has shown that LCD screens produce more reliable \gls{SSVEP} response than \gls{LED}~\cite{lcd_lcd_led}. Another article, however, concludes that \glspl{BCI} that used \glspl{LED} as visual stimuli have achieved better performance~\cite{ssvep_stim}. But since using \glspl{LED} requires dedicated hardware, in this thesis only the stimulus that can be presented by a computer monitor is discussed.
 
-A computer monitor has certain size, resolution and refresh rate. Monitor resolution and size limit the size of the visual stimuli that can be used and the distance between the stimuli. Monitor refresh rate, on the other hand, limits the blinking frequency of the stimulus that can be used. Research has shown that LCD screens produce more reliable \gls{SSVEP} response when using the monitor refresh rate for synchronisation rather than a timer~\cite{lcd_lcd_led}. In this thesis, monitor refresh rate is used for synchronisation.
+A computer monitor has certain size, resolution and \gls{refresh rate}. Monitor resolution and size limit the size of the visual stimuli that can be used and the distance between the stimuli. Monitor \gls{refresh rate}, on the other hand, limits the blinking frequency of the stimulus that can be used. Research has shown that LCD screens produce more reliable \gls{SSVEP} response when using monitor \gls{refresh rate} for measuring the time between stimuli presentations rather than a timer~\cite{lcd_lcd_led}. Therefore, monitor \gls{refresh rate} is used for timing also in this thesis.
 
-Monitor refresh rate is the number of consecutive images or frames shown on screen in a second, assuming that the frames are produces at least as fast as they can be displayed. A frame is one of the images that compose the changing picture on screen. Monitor with a refresh rate of 60 Hz can display 60 frames per second. 
+Monitor \gls{refresh rate} is the number of consecutive images or \glspl{frame} shown on the screen in a second, assuming that the \glspl{frame} are produces at least as fast as they can be displayed. A \gls{frame} is one of the images that compose the changing picture on screen. Monitor with a \gls{refresh rate} of 60 Hz can display 60 \glspl{frame} per second. 
 
 Often blinking one-coloured squares on one-coloured background are used as visual stimuli in \gls{SSVEP}-based \glspl{BCI}~\cite{ssvep_stim}. The squares may have symbols on them, for example letters or numbers. The stimuli of \gls{VEP}-based \gls{BCI} are also called \glspl{target}. The blinking of a target is called \gls{flickering}.
 
-In every frame each \gls{target} can be in one of two states---displayed or not displayed. The state of a \gls{target} can be changed only when the frame changes. The state switches should be distributed as evenly as possible for the target frequency to be constant. Distributing the state switches is easier with some frequencies than others. For example, if refresh rate is 60 Hz, then
+In every \gls{frame} each \gls{target} can be in one of two \glspl{state}---displayed or not displayed. The \gls{state} of a \gls{target} can be switched only when current \gls{frame} is replaced with next \gls{frame}. The \gls{state} switches should be distributed as evenly as possible for the target frequency to be constant. Distributing the \gls{state} switches is easier with some frequencies than others. For example, if \gls{refresh rate} is 60 Hz, then
 \begin{itemize}
-	\item 10 Hz \gls{target} \gls{flickering} can be achieved by presenting the \gls{target} $\frac{60}{10}=6$ times slower than the refresh rate. This means, that the \gls{target} has to be presented once in every 6 frames. Since 6 is even number, 10 Hz \gls{flickering} can be achieved by changing the state of the \gls{target} after every 3 frames. If representing this \gls{flickering} as a waveform as in figure~\ref{fig:flickering}, it can be seen that the waveform is a \gls{square wave}.
-	\item 12 Hz \gls{target} \gls{flickering} can be achieved by presenting the \gls{target} $\frac{60}{12}=5$ times slower than the refresh rate, the \gls{target} has to be presented once in every 5 frames and since 5 is odd number, the amount of time the target is in on state and in off state cannot be equal. Therefore, the \gls{target} should be 3 frames in displayed state and 2 frames in not displayed state or the other way round. If representing this \gls{flickering} as a waveform as in figure~\ref{fig:flickering}, it can be seen that the waveform is a \gls{rectangular wave}.
-	\item 11 Hz \gls{target} \gls{flickering} can be achieved by presenting the \gls{target} $\frac{60}{11}\approx 5.45$ times slower than the refresh rate. This means, that the \gls{target} has to be presented once in every 5.45 frames. Since 5.45 is not a natural number, the \gls{target} \gls{flickering} will be irregular. 11 Hz target \gls{flickering} from the paper by Wang \textit{et al.}~\cite{11hz} is used as an example in figure~\ref{fig:flickering}. Although 11 Hz frequency produces irregular \gls{flickering}, it is still possible to detect \gls{SSVEP} elicited by it in the Emotiv EPOC recording~\cite{emotiv_11hz}. In this thesis, the waveform produced by 11 Hz \gls{flickering} is called an \gls{irregular square wave}.
+	\item 10 Hz \gls{flickering} can be achieved by presenting the \gls{target} $\frac{60}{10}=6$ times slower than the \gls{refresh rate}. This means, that the \gls{target} has to be presented once in every 6 \glspl{frame}. Since 6 is even number, 10 Hz \gls{flickering} can be achieved by changing the \gls{state} of the \gls{target} after every $\frac{6}{2} = 3$ \glspl{frame}. If this \gls{flickering} is plotted as a function of \gls{state} versus time as in figure~\ref{fig:flickering}, it can be seen that it produces a \gls{square wave}. In this thesis, the waveform produced by plotting the \gls{flickering} is called \gls{flickering waveform}.
+	\item 12 Hz \gls{flickering} can be achieved by presenting the \gls{target} $\frac{60}{12}=5$ times slower than the \gls{refresh rate}. The \gls{target} has to be presented once in every 5 \glspl{frame} and since 5 is odd number, the amount of time the target is in on \gls{state} and in off \gls{state} cannot be equal. Therefore, the \gls{target} should be 3 \glspl{frame} in displayed \gls{state} and 2 \glspl{frame} in not displayed \gls{state} or the other way round. If representing this \gls{flickering} as a \gls{flickering waveform} as in figure~\ref{fig:flickering}, it can be seen that the waveform is a \gls{rectangular wave}.
+	\item 11 Hz \gls{flickering} can be achieved by presenting the \gls{target} $\frac{60}{11}\approx 5.45$ times slower than the \gls{refresh rate}. This means, that the \gls{target} has to be presented once in every 5.45 \glspl{frame}. Since 5.45 is not a natural number, the \gls{flickering} will be irregular. 11 Hz target \gls{flickering} from the paper by Wang \textit{et al.}~\cite{11hz} is used as an example in figure~\ref{fig:flickering}. Although 11 Hz frequency produces irregular \gls{flickering}, it is still possible to detect \gls{SSVEP} elicited by it in the Emotiv EPOC recording~\cite{emotiv_11hz}.
 \end{itemize}
 
 \begin{figure}[h]
@@ -45,61 +45,61 @@ In every frame each \gls{target} can be in one of two states---displayed or not 
 	\caption{Adjusting target flickering to refresh rate}
 	\label{fig:flickering}
 \end{figure}
-A \gls{duty cycle} is used to characterise a \gls{rectangular wave}. \Gls{duty cycle} is the percentage of the amount of time the \gls{target} is in displayed state in one period. If the target is in displayed state for 2 frames and in not displayed state for 3 frames in one period, then the \gls{duty cycle} of the \gls{rectangular wave} is $\frac{2}{2+3}\cdot 100\%=40\%$. \Gls{square wave} has a duty cycle of 50\%. Research has shown that the \gls{SSVEP} elicited by \gls{square wave} \gls{flickering} can be more accurately detected than those elicited by \glspl{rectangular wave} \gls{flickering}.
+A \gls{duty cycle} is used to characterise a \gls{rectangular wave}. \Gls{duty cycle} is the percentage of the amount of time the \gls{target} is in displayed \gls{state} in one period. If the target is in displayed \gls{state} for 2 \glspl{frame} and in not displayed \gls{state} for 3 \glspl{frame} in one period, then the \gls{duty cycle} of the \gls{rectangular wave} is $\frac{2}{2+3}\cdot 100\%=40\%$. \Gls{square wave} has a \gls{duty cycle} of 50\%. Research has shown that the \gls{SSVEP} elicited by \gls{square wave} \gls{flickering} can be more accurately detected than those elicited by \glspl{rectangular wave} \gls{flickering}~\cite{ssvep_stim}.
 
-The previous discussion was about blinking shapes or single graphic stimuli. There is another type of \gls{SSVEP} stimuli called pattern reversal stimuli that can also be presented by computer screen. Pattern reversal stimuli is rendered by changing between two different patterns, for example alternating the colours of a chequerboard~\cite{ssvep_stim}. The main difference between single graphic stimuli and pattern reversal stimuli is that single graphic stimuli elicits \gls{SSVEP} response after every two alterations, while pattern reversal stimuli elicits \gls{SSVEP} response after every alteration~\cite{ssvep_stim}.
+The previous discussion was about blinking shapes or \gls{single graphic} stimuli. There is another type of \gls{SSVEP} stimuli called \gls{pattern reversal} stimuli that can also be presented by computer screen. \Gls{pattern reversal} stimuli is rendered by changing between two different patterns, for example alternating the colours of a chequerboard~\cite{ssvep_stim}. The main difference between \gls{single graphic} stimuli and \gls{pattern reversal} stimuli is that \gls{single graphic} stimuli elicits \gls{SSVEP} response after every two alterations, while \gls{pattern reversal} stimuli elicits \gls{SSVEP} response after every alteration~\cite{ssvep_stim}.
 
-The fastest possible target frequency can be achieved by changing between on and off states of the target every time a new frame is displayed. If the state is changed at lower rate, the \gls{target} frequency will also be lower. Perhaps it is most reasonable to calculate the \gls{target} frequency with:
+The fastest possible target frequency can be achieved by changing between on and off \glspl{state} of a target every time a new \gls{frame} is displayed. If the \gls{state} is changed at lower rate, the \gls{target} frequency will also be lower. Perhaps it is most reasonable to calculate the \gls{target} frequency with:
 \begin{equation}
 	f_{single\mbox{ }graphic} = \frac{n}{2T} \qquad f_{pattern\mbox{ }reversal} = \frac{n}{T}
 \end{equation}
-where $T$ is the period of the \gls{flickering}, $n$ is the number of times the target state is switched in a time period of $T$ and $f$ is the target frequency.
+where $T$ is the period of the \gls{flickering waveform}, $n$ is the number of times the \gls{target} \gls{state} is switched in a time period of $T$ and $f$ is the \gls{flickering} frequency.
 
-\gls{SSVEP} reflects certain properties of the visual stimulus~\cite{ssvep_response}. Most important of these properties is that \gls{SSVEP} has a component with the same frequency as the visual stimulus. But that is not the only component frequency in \gls{SSVEP}. \gls{SSVEP} has other components too that are discussed in section~\ref{sec:fourier}. It is sufficient to detect only the component with visual stimuli presentation frequency in the \gls{EEG} recording, but to improve the performance other components should be detected too~\cite{harmonic_imrpovement}.
+Therefore computer monitor can be used to present visual stimuli to a subject and monitor \gls{refresh rate} should be used to measure the time between stimuli presentations. Adjusting \gls{target} \gls{flickering} to the \gls{frame} changes can produce different \glspl{flickering waveform} for different \gls{flickering} frequencies. Since the \glspl{flickering waveform} are different, the \gls{SSVEP} response will also be different.
 
-\section{Decomposing signals}
-
-\subsection{Fourier analysis}
+\section{Fourier analysis}
 \label{sec:fourier}
 
-As discussed in the previous section, the flickering of a target can produce different waveforms. This section will discuss how these waveforms and other signals can be represented by sums of simpler trigonometric functions. The study of this decomposition process is called Fourier analysis, named after Joseph Fourier, whose insight to model all functions by trigonometric series was a breakthrough in the field in 1807.
+As discussed in the previous section, the \gls{flickering} of a \gls{target} can produce different waveforms. This section will discuss how these waveforms and other signals can be represented by sums of simpler trigonometric functions. The study of this decomposition process is called Fourier analysis, named after Joseph Fourier, whose insight to model all functions by trigonometric series was a breakthrough in the field in 1807.
 
-The following paragraph is based on the book by Hartmann~\cite{pure_tone}. The simpler trigonometric functions that a signal is decomposed into are pure tones---the waveforms that contain only one frequency. All other waveforms have at least two frequencies. Pure tone waveforms are sine and cosine waves. Important property of a pure tone is that linear operations do not change the shape of the pure tone waveform.
+The following paragraph is based on the book by Hartmann~\cite{pure_tone}. The simpler trigonometric functions that a signal is decomposed into are \glspl{pure tone}---the waveforms that contain only one frequency. All other waveforms have at least two frequencies. \Gls{pure tone} waveforms are sine and cosine waves. Important property of a \gls{pure tone} is that linear operations do not change the shape of the \gls{pure tone} waveform.
 
-The pure tones are used to represent all possible frequencies that a signal may contain. The decomposition process of a signal is called Fourier transform and it is used to decompose a function of time into pure tones or frequency components that make it up. The function of time can be for example the \gls{EEG} recording represented as voltage versus time or the target flickering represented as state versus time. Fourier transform converts signal from time domain or the function of time to frequency domain or the function of frequency. The representation of a time-domain signal in a frequency domain is called frequency spectrum. Frequency spectrum contains information about amplitude and phase of different frequencies. Therefore, frequency spectrum can be presented as a function of frequency versus amplitude and phase.
+The \glspl{pure tone} are used to represent all possible frequencies that a signal may contain. The decomposition process of a signal is called \gls{Fourier transform} and it is used to decompose a function of time into \glspl{pure tone} or \glspl{frequency component} that make it up. The function of time can be for example the \gls{EEG} recording represented as voltage versus time or the \gls{target} \gls{flickering} represented as \gls{state} versus time. \Gls{Fourier transform} converts signal from time domain or the function of time to frequency domain or the function of frequency. The representation of a time-domain signal in a frequency domain is called \gls{frequency spectrum}. \Gls{frequency spectrum} contains information about amplitude and phase of different frequencies. Therefore, \gls{frequency spectrum} can be presented as a function of frequency versus amplitude and phase.
 
-To represent both amplitude and phase, complex numbers are used. Complex numbers can be represented as a pair of real numbers and therefore complex numbers can be used to represent two values. The amplitude and phase do not correspond to the real and imaginary part of the complex number but rather are related to the absolute value or the modulus and phase of the complex number. In this thesis the phase information from the frequency spectrum is not used. There are, however, \glspl{BCI} that also use phase information~\cite{MPCC}. Since only the information about amplitude is required in this thesis, it is possible to convert the frequency spectrum into power spectral density, which is represented as a function of amplitude squared or power versus frequency.
+To represent both amplitude and phase, complex numbers are used. Complex numbers can be represented as a pair of real numbers and therefore complex numbers can be used to represent two values. The amplitude and phase do not correspond to the real and imaginary part of the complex number but rather are related to the absolute value or the modulus and phase of the complex number. In this thesis the phase information from the \gls{frequency spectrum} is not used. There are, however, \glspl{BCI} that also use the phase information~\cite{MPCC}. Since only the information about amplitude is required in this thesis, it is possible to convert the \gls{frequency spectrum} into \gls{power spectral density}, which is represented as a function of amplitude squared or power versus frequency.
 
-To conclude previous discussion, the amount of frequency $f$ present in a signal can be calculated by first calculating the frequency spectrum with Fourier transform and then taking modulus squared of the frequency spectrum's value at frequency $f$.
+To conclude previous discussion, the amount of frequency $f$ present in a signal can be calculated by first calculating the \gls{frequency spectrum} with \gls{Fourier transform} and then taking modulus squared of the \gls{frequency spectrum}'s value at frequency $f$.
 
-In digital devices, however, theoretical power spectral density cannot be calculated. The measurement period would have to be infinitely long to a acquire the true power spectral density~\cite{psd}. Therefore, power spectral estimation is used. The modulus squared of frequency spectrum in a real-world application is called periodogram and it is the estimation of the power spectral density. There are other spectral estimation methods available.
+In digital devices, however, theoretical \gls{power spectral density} cannot be calculated. The measurement period would have to be infinitely long to a acquire the true \gls{power spectral density}~\cite{psd}. Therefore, spectral estimation is used. The modulus squared of frequency spectrum in a real-world application is called \gls{periodogram} and it is the estimation of the \gls{power spectral density}. There are other spectral estimation methods available.
 
-Since digital devices work with discrete signals as discussed in section~\ref{sec:EEG_comparison}, in a real-world application discrete version of the Fourier transform is used. The algorithm used to compute the discrete Fourier transform is called \gls{FFT}. The frequency spectrum calculated by \gls{FFT} is discrete---if the discrete real-valued input signal, as is the case with \gls{EEG} recording, has $N$ values then the output has $\frac{N}{2}$ values. This derives from the definition and symmetric property of the discrete Fourier transform. %The higher the sampling rate and \gls{ADC} resolution of a recording device, the more accurate the recording and therefore the more accurate the frequency spectrum and the periodogram of the signal.
+Since digital devices work with discrete signals as discussed in section~\ref{sec:EEG_comparison}, in a real-world application discrete version of the \gls{Fourier transform} is used. The algorithm used to compute the discrete \gls{Fourier transform} is called \gls{FFT}. The \gls{frequency spectrum} calculated by \gls{FFT} is discrete---if the discrete real-valued input signal, as is the case with \gls{EEG} recording, has $N$ values then the output has $\frac{N}{2}$ values. This derives from the definition and symmetric property of the discrete \gls{Fourier transform}. %The higher the sampling rate and \gls{ADC} resolution of a recording device, the more accurate the recording and therefore the more accurate the frequency spectrum and the periodogram of the signal.
 
-The signal that is recorded, however, may contain frequencies that are too high to be detected from the discrete signal. Theoretically, the sampling rate of the device has to be more than two times higher than the highest frequency in the signal to reconstruct the continuous signal from the discrete signal or to decompose the signal into frequency components. When looking it from different angle, the highest frequency that can be detected with a sampling rate of $f$ is $\frac{2}{f}$ and it is called Nyguist frequency. But since real-world application are imperfect, even higher sampling rate are needed.
+The signal that is recorded, however, may contain frequencies that are too high to be detected from the discrete signal. Theoretically, the \gls{sampling rate} of the device has to be more than two times higher than the highest frequency in the signal to reconstruct the continuous signal from the discrete signal and also to decompose the signal into \glspl{frequency component}. When looking it from different angle, the highest frequency that can be detected with a \gls{sampling rate} of $f$ is $\frac{2}{f}$ and it is called \gls{Nyguist frequency}. But since real-world application are imperfect, even higher \gls{sampling rate} is needed.
 
-To conclude previous discussion, the frequency spectrum calculated by \gls{FFT} from real-valued time-domain signal with $N$ values is defined at frequencies $\frac{1}{N}, \frac{2}{N}, \dots\frac{f}{2N}$. These frequencies are also called frequency bins. The length of a frequency spectrum depends on the length of the signal from which it is calculated. The longer the signal, the more frequency bins will be acquired.
+To conclude previous discussion, the \gls{frequency spectrum} calculated by \gls{FFT} from real-valued time-domain signal with $N$ values is defined at frequencies $\frac{1}{N}, \frac{2}{N}, \dots\frac{f}{2N}$. These frequencies are also called \glspl{frequency bin}. The length of a \gls{frequency spectrum} depends on the length of the signal from which it is calculated. The longer the input signal, the more \glspl{frequency bin} will be acquired.
 
-Thus a time-domain signal can be decomposed into pure tones or sine and cosine waves using \gls{FFT}. \gls{FFT} calculates the frequency spectrum of a time-domain signal. Frequency spectrum can be converted to the estimation of power spectral density which contains only the information about the amplitude of the pure tones. This knowledge can be used to detect \glspl{SSVEP} in \gls{EEG} recording.
+Thus a time-domain signal can be decomposed into \glspl{pure tone} or sine and cosine waves using \gls{FFT}. \gls{FFT} calculates the \gls{frequency spectrum} of a time-domain signal. \Gls{frequency spectrum} can be converted to the estimation of \gls{power spectral density} which contains only the information about the amplitude of the \glspl{pure tone}. This knowledge can be used to detect \glspl{SSVEP} in \gls{EEG} recording.
 
 %As already discussed in section~\ref{sec:EEG_comparison}, Emotiv EPOC has high internal sampling rate to filter out high frequencies
 
 %Thus higher sampling rate and \gls{ADC} resolution lead to more accurate \gls{SSVEP} detection.
 
-\subsection{Decomposition of target flickering}
+\section{Decomposition of target flickering}
 
-It can be shown that a square wave is composed of the \gls{fundamental} frequency and its odd \glspl{harmonic}. \Gls{fundamental} frequency is the component with lowest frequency among the components that make up the wave. In case of \gls{square wave} \gls{flickering} and \gls{rectangular wave} \gls{flickering}, the \gls{fundamental} frequency is the frequency of the stimuli presentation. \Glspl{harmonic} are the components of a signal that have frequency of a multiple of the fundamental frequency of the same signal. Therefore, \gls{square wave} can be represented as a sum of sine waves
+This section will focus on the decomposition of the \glspl{flickering waveform}. The \gls{target} \gls{flickering} and decomposition process were discussed in section~\ref{sec:stimuli} and section~\ref{sec:fourier} respectively. As discussed in previous section, only sine and cosine waves are composed of single frequency. Other waveforms have more \gls{frequency component}. The \gls{frequency component} with lowest frequency is called \gls{fundamental} or the first \gls{harmonic} of the signal. \Gls{harmonic} of a signal is a \gls{frequency component} with frequency that is integer multiple of the \gls{fundamental} frequency of the signal. If the \gls{fundamental} frequency is $f$, then first, second are third \glspl{harmonic} have frequencies of $1f$, $2f$, $3f$ respectively.
+
+It can be shown that a \gls{square wave} is composed of odd \glspl{harmonic}. If the \gls{flickering waveform} is \gls{square wave} or \gls{rectangular wave}, the \gls{fundamental} frequency of the waveform is the frequency of the stimuli presentation. Therefore, \gls{square wave} with \gls{fundamental} frequency $f$ can be represented as a sum of sine waves
 \begin{equation}
 	\label{eq:square}
-	square(x) = \sum_{i=1}^{\infty}a_i sin(2\pi 2if)
+	square(t) = \sum_{n=1,3,5,\dots}^{\infty}\frac{1}{n} sin(2\pi nft)
 \end{equation}
-where $square(x)$ is the flickering represented as state versus time, $f$ is the flickering frequency and $a_i$ is the amplitude of i'th component. \Gls{fundamental} frequency of a square wave or rectangular wave has the highest amplitude or in other words, $\max_i a_i=a_1$. \Gls{rectangular wave}'s frequency depends on the \gls{duty cycle} of the wave.
+where $square(t)$ is the \gls{flickering} represented as \gls{state} versus time, $\frac{1}{n}$ is the amplitude of a \gls{frequency component} and $f$ is the \gls{fundamental} frequency of the waveform. It can be seen that the \gls{fundamental} has the highest amplitude. \Gls{rectangular wave}'s \glspl{frequency component} depend on the \gls{duty cycle} of the wave. But as is the case with \glspl{square wave}, the \gls{fundamental} has the highest amplitude also in \gls{rectangular wave}.
 
-Unfortunately, the \gls{SSVEP} response to \gls{target} \gls{flickering} does not contain only the frequencies present in the waveform of the \gls{target} \gls{flickering}, but the frequencies that are present in the components of \gls{target} \gls{flickering} are more successfully elicited in \gls{SSVEP}~\cite{square_sine}. It has even been reported that \gls{SSVEP} contains small subharmonics of the fundamental frequency.
-%Rectangular wave is composed of frequencies not including every third harmonic
-%\begin{equation}
-%	rectangular(x)=\sum_{i=1}^{\infty} a_i sin(2\pi if)+b_i sin(2\pi 2if)
-%\end{equation}
+Unfortunately, the \gls{SSVEP} response to \gls{target} \gls{flickering} does not contain only the frequencies that are present in the \glspl{frequency component} of the \gls{flickering waveform}---\gls{SSVEP} contains other frequencies too. However, the frequencies that are present in the \glspl{frequency component} of the \gls{flickering waveform} are more successfully elicited in \gls{SSVEP} response~\cite{square_sine}. It has even been reported that \gls{SSVEP} contains small \glspl{subharmonic} of the \gls{flickering waveform}~\cite{ssvep_response}. \Gls{subharmonic} of a signal is \gls{frequenct component} with frequency $\frac{f}{n}$, where $f$ is the \gls{fundamental} frequency of the signal and $n$ is an integer.
+
+Thus \gls{SSVEP} reflects certain properties of the visual stimulus~\cite{ssvep_response}. The frequencies that are present in \gls{flickering waveform} are likely to be found also in the \gls{SSVEP} response, but other \glspl{frequency component} are present in the \gls{SSVEP} too~\cite{square_sine}. It is sufficient to detect only the \gls{frequency component} with the same frequency as the visual stimuli presentation in the \gls{EEG} recording, but to improve the performance other \glspl{frequency component} should be detected too~\cite{harmonic_imrpovement}.
+
+%. Most important of these properties is that \gls{SSVEP} has a component with the same frequency as the visual stimulus. But that is not the only component frequency in \gls{SSVEP}. \gls{SSVEP} has other components too that are discussed in section~\ref{sec:fourier}. 
 
 \section{Related work}
 
@@ -137,7 +137,11 @@ This section describes the \gls{PSDA} and \gls{CCA} method. These are the method
 
 \subsection{Power spectral density analysis}
 
-\Gls{PSDA} is widely used in \gls{SSVEP}-based \glspl{BCI}~\cite{bin2009cca}. This method is uses \gls{FFT} to estimate power spectral density. The power spectral estimation calculated by taking the absolute value squared of the \gls{FFT} is called periodogram. 
+\Gls{PSDA} is widely used in \gls{SSVEP}-based \glspl{BCI}~\cite{bin2009cca}. This method is based on a \gls{power spectral density} estimation, usually periodogram. Calculating the periodogram was discussed in section~\ref{sec:fourier}.
+
+There are different ways how to use the periodogram for \gls{feature extraction}. Some \glspl{BCI} use a training session to find the threshold value that certain frequency power has to exceed. Other \glspl{BCI} calculate signal-to-noise ratio or other values that are related to signal-to-noise ratio. For example, if target frequency is $f$, then the ratio of frequency $f$ power to the sum of adjacent frequency bins is calculated. Another possibility is to use the ratio of the frequency $f$ power to the whole periodogram. All the methods can use in addition to the target frequency $f$ also its harmonics. Usually three harmonics are used.
+
+One problem that occurs is that the periodogram is discrete. Periodogram might not have frequency bins on the exact frequencies of interest. More precisely, the frequencies of targets used in \gls{BCI}. In this case interpolation can be used. Interpolation is method for constructing the signal between the discrete points.
 
 \subsection{Canonical correlation analysis}
 
