--- a/thesis/tex/EEG.tex
+++ b/thesis/tex/EEG.tex
@@ -178,7 +178,7 @@ To make the detection of \glspl{VEP} easier, \glspl{SSVEP} are used. If the visu
 
 In section~\ref{sec:neuroimaging} different functional neuroimaging methods were compared and it was concluded that currently \gls{EEG} is most suitable for designing inexpensive and portable interface for controlling a robot. But there is a wide variety of EEG devices available. The aim of this section is to briefly compare some of the devices and choose inexpensive and portable device available to the consumer.
 
-Continuous signal cannot be directly represented in computers or in other digital devices and therefore continuous signal has to be converted to discrete signal to process it with a computer. As already mentioned in section~\ref{sec:EEG}, \gls{EEG} measures brain activity as function of voltage versus time. This function represents discrete signal, which means that both voltage and time are discrete. In other words, there is a finite set of possible values that the voltage can have and these values are acquired one after another in a certain rate. This rate at which digital values are extracted from a continuous signal is called \gls{sampling rate}. The device which converts continuous voltage to a sequence of discrete values is called \gls{ADC} device and \gls{ADC} resolution shows how many different values the device can represent.
+Continuous signal cannot be directly represented in computers or in other digital devices and therefore continuous signal has to be converted to discrete signal to process it with a computer. As already mentioned in section~\ref{sec:EEG}, \gls{EEG} measures brain activity as function of voltage versus time. This function represents discrete signal, which means that both voltage and time are discrete. In other words, there is a finite set of possible values that the voltage can have and these values are acquired one after another in a certain rate. This rate at which digital values are extracted from a continuous signal is called \gls{sampling rate}. The device which converts continuous voltage to a sequence of discrete values is called \gls{ADC} device. \gls{ADC} resolution shows how many different values the device can represent.
 
 The table~\ref{tab:EEG} shows comparison of different \gls{EEG} devices. Devices are compared by price, the number of electrodes or channels, the \gls{sampling rate} and the \gls{ADC} resolution. The higher the sampling rate, the more values are extracted in same time interval. The higher the \gls{ADC} resolution, the more different voltages the device can represent.
 
