--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -147,10 +147,6 @@
 	name = rectangular wave,
 	description = {--}
 }
-\newglossaryentry{irregular square wave}{
-	name = irregular square wave,
-	description = {--}
-}
 \newglossaryentry{duty cycle}{
 	name = duty cycle,
 	description = {--}
@@ -159,8 +155,68 @@
 	name = harmonic,
 	description = {--}
 }
+\newglossaryentry{subharmonic}{
+	name = subharmonic,
+	description = {--}
+}
 \newglossaryentry{fundamental}{
 	name = fundamental,
+	description = {--}
+}
+\newglossaryentry{refresh rate}{
+	name = refresh rate,
+	description = {--}
+}
+\newglossaryentry{frame}{
+	name = frame,
+	description = {--}
+}
+\newglossaryentry{flickering waveform}{
+	name = \gls{flickering} waveform,
+	description = {--}
+}
+\newglossaryentry{state}{
+	name = state,
+	description = {--}
+}
+\newglossaryentry{single graphic}{
+	name = single graphic,
+	description = {--}
+}
+\newglossaryentry{pattern reversal}{
+	name = single graphic,
+	description = {--}
+}
+\newglossaryentry{pure tone}{
+	name = pure tone,
+	description = {--}
+}
+\newglossaryentry{Fourier transform}{
+	name = Fourier transform,
+	description = {--}
+}
+\newglossaryentry{frequency spectrum}{
+	name = frequency spectrum,
+	description = {--}
+}
+\newglossaryentry{power spectral density}{
+	name = power spectral density,
+	description = {--}
+}
+\newglossaryentry{periodogram}{
+	name = periodogram,
+	description = {--}
+}
+\newglossaryentry{Nyguist frequency}{
+	name = Nyguist frequency,
+	description = {--}
+}
+\newglossaryentry{frequency bin}{
+	name = frequency bin,
+	description = {--}
+}
+\newglossaryentry{frequency component}{
+	name = frequency component,
 	description = {--}
 }
 
